--- a/trunk/methods.html
+++ b/trunk/methods.html
@@ -50,22 +50,26 @@
 underline; ">: A Web Archive of Documentary and Critical Editions</span>.
 This project was started at the University of Virginia in response to two
 stimulating and inspiring courses taught in the spring of 2008: Jerome
-McGann’s “<span style="font-variant: small-caps; text-transform: none;
-">c</span>19 Discourse Formations” and David Vander Meulen’s
-“Introduction to Scholarly Editing.” Even as we searched for an
+McGann&rsquo;s &ldquo;<span
+style="font-variant: small-caps; text-transform: none;">c</span>19
+Discourse Formations&rdquo; and David Vander Meulen&rsquo;s
+&ldquo;Introduction to Scholarly Editing.&rdquo; Even as we searched for an
 appropriate version of <span style="font-style: italic; ">Richard Feverel
-</span>to read in McGann’s class (a process described in more detail at
+</span>to read in McGann&rsquo;s class
+(a process described in more detail at
 the end of the first part of my introduction), I looked for a work to edit
-as my final project for Vander Meulen’s course. It did not take me long to
+as my final project for Vander Meulen&rsquo;s course.
+It did not take me long to
 put two and two together. In addition, I had the good fortune to be engaged
 to Carsten Clark, a computer programmer with extra time on his hands and
 seemingly infinite patience; he is the author of the dynamic html
 presentation system that comprises the website.  Finally, being a book
 collector by nature and a rare book curator by profession, I was unafraid of
-starting a new collection. And so it all began.    </p>
+starting a new collection. And so it all began.</p>
 
 <p>    The result is the present archive, which contains working
-documentary editions of the chapter “Indicates the Approaches of Fever”
+documentary editions of the chapter &ldquo;Indicates the Approaches of
+Fever&rdquo;
 as published in the original 1859 Chapman and Hall, 1875 Tauchnitz, and 1896
 Archibald Constable editions. These new, searchable electronic documents
 preserve original pagination, original line breaks, and offer notes in
@@ -82,32 +86,32 @@ and/or scholarly significance:</p>
     The Bernhard Tauchnitz revised edition / T1875</li>
 
 <li>1878 :
-    The C. Keegan Paul revised second English edition / KP1878   </li>
+    The C. Keegan Paul revised second English edition / KP1878</li>
 
 <li>1885 :
-    The Chapman and Hall “New Edition”
+    The Chapman and Hall &ldquo;New Edition&rdquo;
     (printed by Virtue) / CH1885</li>
 
 <li>1890 :
-    The Chapman and Hall “New Edition”
+    The Chapman and Hall &ldquo;New Edition&rdquo;
     (printed by Clowes) / CH1890</li>
 
 <li>1895 :
-    The Chapman and Hall “New Edition”
+    The Chapman and Hall &ldquo;New Edition&rdquo;
     (printed by George Bell) / CH1895</li>
 
 <li>1896 :
-    The Archibald Constable “De Luxe”
+    The Archibald Constable &ldquo;De Luxe&rdquo;
     edition (heavily cut and revised) / AC1896</li>
 
 <li>1950 :
-    The Modern Library edition (introduced by Lionel Stevenson and based on the
-                    1859 first edition) / ML1950</li>
+    The Modern Library edition (introduced by Lionel Stevenson and based on
+    the 1859 first edition) / ML1950</li>
 
 </ul>
 
-<p>I have created flat-file documentary editions of “Indicates the
-Approaches of Fever” for all of these books, and it is only a matter of
+<p>I have created flat-file documentary editions of &ldquo;Indicates the
+Approaches of Fever&rdquo; for all of these books, and it is only a matter of
 time (and some coding) before all of them are available on the web with live
 notes. At present, I have created over 11,000 lines of html for this
 project, and I have spent more than 60 hours coding the three available
@@ -119,7 +123,7 @@ the website? These are to come. In the first part of my introduction, I
 offer interpretations of some of the changes made across these editions and
 give my reasoning for why three separate works exist among these documents;
 I will continue this interpretative work as I begin to critically edit the
-documentary editions that I have already created.  </p>
+documentary editions that I have already created.</p>
 
 <p> </p>
 
@@ -131,7 +135,7 @@ text exists for any of these documents. Also, the majority of the editions
 appear in entirely different formats, with different line breaks. For this
 reason, it was not feasible to conduct my work with a Lindstrand or Hinman
 collator, which significantly slowed down the process of transcription and
-collation.    </p>
+collation.</p>
 
 <p>    To start my project, I began with a copy of <span
 style="font-style: italic; ">Richard Feverel </span>downloaded from Project
@@ -140,7 +144,7 @@ Constable<span style="font-style: italic; "> </span>editions, but its
 origins remain unclear.) I edited this text as a Macintosh Pages document to
 conform to the 1950 Modern Library edition. Having revised the file and
 saved it under its new name (ML1950), I saved a second copy under the new
-name, CH1859, and then began collating it against UVa’s copy of the 1859
+name, CH1859, and then began collating it against UVa&rsquo;s copy of the 1859
 Chapman and Hall first edition.  As I moved through the file, I updated line
 breaks, pagination, and made notes in brackets whenever I discovered a
 variant. (See sample document.) Before accepting any variant, though, I
@@ -151,8 +155,7 @@ edition. I then moved on to the Tauchnitz edition, following the same
 procedure, but saving a second copy of the CH1859 document under the new
 name T1875. Again, whenever I came across variants, I made notes in brackets
 and referred to the original copies. In this way, I was able to produce very
-refined versions of all of the editions used in this project.
-        </p>
+refined versions of all of the editions used in this project.</p>
 
 <p>    Except for the 1878 C. Keegan Paul edition, all of the
 documentary texts that appear in this project were drawn from the personal
@@ -169,7 +172,7 @@ OCR and then to collate those texts against my existing ones via Juxta. I
 will probably carry this out only after I have photographed all of the pages
 from the editions currently documented in this project (<span
 style="font-style: italic; ">i.e.</span> in this list above; also see
-“Design Goals” below).<span style="font-weight: bold; "></span></p>
+&ldquo;Design Goals&rdquo; below).<span style="font-weight: bold; "></span></p>
 
 <p> </p>
 
@@ -177,18 +180,20 @@ style="font-style: italic; ">i.e.</span> in this list above; also see
 <h3>Design and Editorial Goals</h3>
 
 <p>Carsten Clark and I hope to create a website that is easy to navigate and
-practical for study. Users should not have to read a “how-to” manual or
+practical for study. Users should not have to read a
+&ldquo;how-to&rdquo; manual or
 lengthy introduction to learn how to use the site; design and organization
 should be as intuitive and flexible as possible, allowing users the option
 of reading and working with texts in as many ways possible. For example,
 historical collations will be provided in a table that can be sorted, as
-well as in the form of “floating” and “sticky” notes that users can
+well as in the form of &ldquo;floating&rdquo; and &ldquo;sticky&rdquo;
+notes that users can
 manipulate or dismiss depending on their reading preferences (see no. 2 for
 more details).</p>
 
 <p><span style="font-style: italic; ">1) To provide documentary editions of
 all editions of </span>The Ordeal of Richard Feverel<span style="font-style:
-italic; "> that were published during Meredith’s lifetime, as well as
+italic; "> that were published during Meredith&rsquo;s lifetime, as well as
 documentary editions of influential later printings (such as the Modern
 Library edition, based on the 1859 Chapman and Hall first
 edition)</span></p>
@@ -220,13 +225,13 @@ interest to students and scholars (available for CH1859)</p>
    (to be implemented)</p>
 
 <p>--Allow users to hide notes, so that they can read an uninterrupted
-“clear text” (currently available)</p>
+&ldquo;clear text&rdquo; (currently available)</p>
 
 <p> </p>
 
 <p><span style="font-style: italic; ">2) To provide historical collations of
 all editions of </span>The Ordeal of Richard Feverel<span style="font-style:
-italic; "> that were published during Meredith’s lifetime, as well as
+italic; "> that were published during Meredith&rsquo;s lifetime, as well as
 documentary editions of influential later printings (such as the Modern
 Library edition, based on the 1859 Chapman and Hall first edition)
 </span>(eight texts examined and edited; the rest in progress)</p>
@@ -245,11 +250,11 @@ one color (green) and substantives in another (blue); but also allow users
 the option to read the texts without these codes, if they so desire
 (currently available)</p>
 
-<p>--Offer users the ability to read “floating” notes on historical
+<p>--Offer users the ability to read &ldquo;floating&rdquo; notes on historical
 collations; when desired, notes appear as users read though texts but vanish
 unless users click on them (currently available)</p>
 
-<p>--Offer users the ability to read “sticky” notes on historical
+<p>--Offer users the ability to read &ldquo;sticky&rdquo; notes on historical
 collations; by clicking on the background of any page, all notes for that
 page automatically appear, which users can dismiss one-by-one by clicking on
 notes individually or as a group via a button (currently available)</p>
@@ -262,7 +267,8 @@ three separate works of</span> The Ordeal of Richard Feverel</p>
 <p>--Critically edit and publish editions of the 1859 Chapman and Hall first
 edition, 1875 Tauchnitz edition/1878 C. Keegan Paul edition (details to come
 as we sort out the nuances between these, which constitute the birth of
-novel as a second work), and the 1896 Archibald Constable “De Luxe”
+novel as a second work), and the 1896 Archibald Constable &ldquo;De
+Luxe&rdquo;
 edition (editing to be performed; will be implemented via html)</p>
 
 <p>--Provide notes on historical collation and notes explaining rationale
@@ -276,7 +282,7 @@ the novel (currently available)</p>
 <p> </p>
 
 <p><span style="font-style: italic; ">4) Provide a way for users to submit
-anonymous feedback and suggestions for the site’s future improvement
+anonymous feedback and suggestions for the site&rsquo;s future improvement
 </span>(to be designed and implemented)</p>
 
 <p> </p>
