--- a/trunk/methods.html
+++ b/trunk/methods.html
@@ -126,8 +126,6 @@ give my reasoning for why three separate works exist among these documents;
 I will continue this interpretative work as I begin to critically edit the
 documentary editions that I have already created.</p>
 
-<p> </p>
-
 
 <h3>Procedures</h3>
 
@@ -175,8 +173,6 @@ from the editions currently documented in this project (<span
 style="font-style: italic; ">i.e.</span> in this list above; also see
 &ldquo;Design Goals&rdquo; below).<span style="font-weight: bold; "></span></p>
 
-<p> </p>
-
 
 <h3>Design and Editorial Goals</h3>
 
@@ -192,101 +188,112 @@ notes that users can
 manipulate or dismiss depending on their reading preferences (see no. 2 for
 more details).</p>
 
-<p><span style="font-style: italic; ">1) To provide documentary editions of
-all editions of </span>The Ordeal of Richard Feverel<span style="font-style:
-italic; "> that were published during Meredith&rsquo;s lifetime, as well as
+<ol class="LongList">
+
+<li>To provide documentary editions of
+all editions of <em>The Ordeal of Richard Feverel</em>
+that were published during Meredith&rsquo;s lifetime, as well as
 documentary editions of influential later printings (such as the Modern
 Library edition, based on the 1859 Chapman and Hall first
-edition)</span></p>
+edition)
 
-<p>--Preserve original pagination of copies
-     (currently available for CH1859, T1875, and AC1896)</p>
+<ul>
 
-<p>--Preserve original line breaks of copies
-     (currently available for CH1859, T1875, and AC1896)</p>
+<li>Preserve original pagination of copies
+     (currently available for CH1859, T1875, and AC1896)</li>
 
-<p>--Preserve overall design (<span style="font-style: italic; ">e.g.
+<li>Preserve original line breaks of copies
+     (currently available for CH1859, T1875, and AC1896)</li>
+
+<li>Preserve overall design (<span style="font-style: italic; ">e.g.
 </span>headers, footers, type size, justification) as originally printed
-(to be implemented)</p>
+(to be implemented)</li>
 
-<p>--Present texts in page-by-page format with horizontal scrolling, to
+<li>Present texts in page-by-page format with horizontal scrolling, to
 facilitate reading between books and their electronic versions as well as
 to aid the reading and navigation of electronic versions (currently
-available)</p>
+available)</li>
 
-<p>--Provide photographs of original documents, linked, page by page, to
-electronic, marked-up versions (to be implemented)</p>
+<li>Provide photographs of original documents, linked, page by page, to
+electronic, marked-up versions (to be implemented)</li>
 
-<p>--Provide profiles of all texts studied for each documentary edition,
+<li>Provide profiles of all texts studied for each documentary edition,
 including location of copies, photographs of bindings, descriptions of
 bibliographic features, provenance, and any other information potentially of
-interest to students and scholars (available for CH1859)</p>
+interest to students and scholars (available for CH1859)</li>
 
-<p>--Provide pdf versions of all texts to facilitate printing and study
-   (to be implemented)</p>
+<li>Provide pdf versions of all texts to facilitate printing and study
+   (to be implemented)</li>
 
-<p>--Allow users to hide notes, so that they can read an uninterrupted
-&ldquo;clear text&rdquo; (currently available)</p>
+<li>Allow users to hide notes, so that they can read an uninterrupted
+&ldquo;clear text&rdquo; (currently available)</li>
 
-<p> </p>
+</ul>
+</li>
 
-<p><span style="font-style: italic; ">2) To provide historical collations of
-all editions of </span>The Ordeal of Richard Feverel<span style="font-style:
-italic; "> that were published during Meredith&rsquo;s lifetime, as well as
+<li>To provide historical collations of
+all editions of <em>The Ordeal of Richard Feverel</em>
+that were published during Meredith&rsquo;s lifetime, as well as
 documentary editions of influential later printings (such as the Modern
 Library edition, based on the 1859 Chapman and Hall first edition)
-</span>(eight texts examined and edited; the rest in progress)</p>
+<em>(eight texts examined and edited; the rest in progress)</em>
 
-<p>--Categorize variants first into accidentals and substantives, and then
+<ul>
+
+<li>Categorize variants first into accidentals and substantives, and then
 into subcategories (<span style="font-style: italic; ">e.g.</span>
 capitalization, hyphenation, spelling, &amp;c.) (currently available for
-all editions)</p>
+all editions)</li>
 
-<p>--Publish all variants in a table that can be sorted by users according
+<li>Publish all variants in a table that can be sorted by users according
 to chapters, categories, and/or subcategories (currently available, but to
-be refined)</p>
+be refined)</li>
 
-<p>--Color-code texts of documentary editions so that accidentals appear in
+<li>Color-code texts of documentary editions so that accidentals appear in
 one color (green) and substantives in another (blue); but also allow users
 the option to read the texts without these codes, if they so desire
-(currently available)</p>
+(currently available)</li>
 
-<p>--Offer users the ability to read &ldquo;floating&rdquo; notes on historical
+<li>Offer users the ability to read &ldquo;floating&rdquo; notes on historical
 collations; when desired, notes appear as users read though texts but vanish
-unless users click on them (currently available)</p>
+unless users click on them (currently available)</li>
 
-<p>--Offer users the ability to read &ldquo;sticky&rdquo; notes on historical
+<li>Offer users the ability to read &ldquo;sticky&rdquo; notes on historical
 collations; by clicking on the background of any page, all notes for that
 page automatically appear, which users can dismiss one-by-one by clicking on
-notes individually or as a group via a button (currently available)</p>
+notes individually or as a group via a button (currently available)</li>
 
-<p> </p>
+</ul>
+</li>
 
-<p><span style="font-style: italic; ">3) Create critical editions of the
-three separate works of</span> The Ordeal of Richard Feverel</p>
+<li>Create critical editions of the
+three separate works of <em>The Ordeal of Richard Feverel</em>
 
-<p>--Critically edit and publish editions of the 1859 Chapman and Hall first
+<ul>
+
+<li>Critically edit and publish editions of the 1859 Chapman and Hall first
 edition, 1875 Tauchnitz edition/1878 C. Kegan Paul edition (details to come
 as we sort out the nuances between these, which constitute the birth of
 novel as a second work), and the 1896 Archibald Constable &ldquo;De
 Luxe&rdquo;
-edition (editing to be performed; will be implemented via html)</p>
+edition (editing to be performed; will be implemented via html)</li>
 
-<p>--Provide notes on historical collation and notes explaining rationale
-for emendations (to come)</p>
+<li>Provide notes on historical collation and notes explaining rationale
+for emendations (to come)</li>
 
-<p>--Create an introductory essay, discussing the publishing history of
+<li>Create an introductory essay, discussing the publishing history of
 <span style="font-style: italic; ">The Ordeal of Richard Feverel </span>and
 the methods and procedures employed while editing the various versions of
-the novel (currently available)</p>
+the novel (currently available)</li>
 
-<p> </p>
+</ul>
+</li>
 
-<p><span style="font-style: italic; ">4) Provide a way for users to submit
+<li>Provide a way for users to submit
 anonymous feedback and suggestions for the site&rsquo;s future improvement
-</span>(to be designed and implemented)</p>
+<em>(to be designed and implemented)</em></li>
 
-<p> </p>
+</ol>
 
 </div>
 </body>
